# firmware-interview-project

./: CMakeLists.txt  Drivers.h  FanController.cpp  FanController.h  FanControllerTest.cpp  GpioWrapper.cpp  GpioWrapper.h  GpioWrapperTest.cpp  MockClass.h  README.md  TempSensor.cpp  TempSensor.h  TempSensorTest.cpp  main.cpp
